gccida/g1/range_binop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3818:20: error: must use 'enum' tag to refer to type 'tree_code'
tree  range_binop( tree_code code, tree type, tree arg0, int upper0_p, tree arg1, int upper1_p) 
                   ^
                   enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3820:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3824:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3830:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3887:20: error: expected expression
v17 = ( tree_node *)*( &global_trees + 12); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3887:9: error: use of undeclared identifier 'tree_node'
v17 = ( tree_node *)*( &global_trees + 12); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3890:20: error: expected expression
v17 = ( tree_node *)*( &global_trees + 11); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/fold-const.c:3890:9: error: use of undeclared identifier 'tree_node'
v17 = ( tree_node *)*( &global_trees + 11); 
        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/range_binop/src/obj/fold-const.o] Error 1
